--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* flex-direction: column; */
+  align-items: start;
+  flex-wrap: wrap;
+}
+.layout {
+  display:grid;
+  grid-template-rows: repeat(3,50px);
+  grid-template-columns: repeat(3,50px);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: stretch;
+  height: 200px;
+  width:300px
 }
 
-.App-link {
-  color: #61dafb;
+.box {
+  border: 1px solid;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box button {
+  width:100%;
+  height: 100%;
+  background-color: white;
+  color: black;
+}
+.past-moves {
+ display: block;
 }
